# lemonbot

./: .gitignore  README.md  TODO  TODO.md  lemonbot.rosinstall
lemonbot_acquisition/: CMakeLists.txt  package.xml
lemonbot_acquisition/include/lemonbot_acquisition/: acquisition_node.h  inbound_buffer.h  laser_projector.h  passthrough.h  pointcloud_accumulator.h  pointcloud_colorizer.h  pointcloud_transformer.h  republishing.h  transformer.h  wait_for_done.h
lemonbot_acquisition/launch/: acquisition.launch  acquisition_pipeline.launch  assembler.launch  single_acquisition.launch
lemonbot_acquisition/msg/: Acquisition.msg
lemonbot_acquisition/src/: _lemonbot_acquisition_node.cpp  acquisition_node.cpp  laser_projector.cpp  lemonbot_acquisition_node.cpp  multiple_acquisition_node.cpp  pointcloud_accumulator.cpp  pointcloud_colorizer.cpp  pointcloud_transformer.cpp  pointcloud_wait_for_done.cpp  single_acquisition_node.cpp
lemonbot_bringup/: CMakeLists.txt  package.xml
lemonbot_bringup/config/: visualize.rviz
lemonbot_bringup/launch/: all.launch  camera.launch  camera_extrinsic_calibration.launch  demo.launch  laser.launch  load_urdf.launch  manual_command.launch  pan_tilt.launch  rgbd.launch  visualize.launch
lemonbot_calibration/: CMakeLists.txt  package.xml
lemonbot_calibration/calibration/: calibration_1.txt  camera_calibration.yaml  hand_in_eye.urdf.xacro  laser_calibration.good.yaml  laser_calibration.yaml
lemonbot_calibration/launch/: extrinsic_calibration.launch  intrinsic_calibration.launch  (+1 more)
lemonbot_capture/: CMakeLists.txt  package.xml
lemonbot_commander/: CMakeLists.txt  package.xml
lemonbot_data_logger/: CMakeLists.txt  package.xml
lemonbot_description/: CMakeLists.txt  package.xml
lemonbot_exports/: CMakeLists.txt  package.xml  setup.py
lemonbot_laser_pipeline/: CMakeLists.txt  package.xml
lemonbot_pointcloud_pipeline/: CMakeLists.txt  package.xml
lemonbot_utils/: CMakeLists.txt  package.xml
(+58 files in other folders)
