<?xml version="1.0"?>
<package format="2">
  <name>lemonbot_acquisition</name>
  <version>0.0.0</version>
  <description>The lemonbot_acquisition package</description>
  <maintainer email="bernardo.lourenco@ua.pt">bernardo.lourenco</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/miguelriemoliveira/lemonbot</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>flir_pantilt_d46</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>lemonbot_utils</build_depend>
  <build_export_depend>flir_pantilt_d46</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>lemonbot_utils</build_export_depend>
  <exec_depend>flir_pantilt_d46</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>lemonbot_utils</exec_depend>
  <export></export>
</package>